refactor: Modernize reactive and microservices code with Java records and enhancements
- Replaced traditional POJOs with records for cleaner, more concise data representation
- Updated method references and accessors to align with Java record usage
- Refactored publisher, subscriber, and stream-handling logic for improved readability
- Switched to `List.of()` where applicable for immutable lists
- Enhanced `try-with-resources` usage for thread management
- Simplified access patterns for collection-based operations (`removeFirst` and compute optimizations)
- Made all applicable fields final for improved immutability and thread safety
- Consolidated redundant code structures, improving efficiency and alignment with modern Java practices